SFDCProject/src/objects/Notes__c.object
<CustomObject>
    <description>This is a Related List on Proposal page to contain Notes</description>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Sl.no</description>
        <label>Note #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Added_By__c</fullName>
        <label>Notes Added By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes by Partner Users</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipName>Proposal_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>Note-{0}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>